--- a/index.html
+++ b/index.html
@@ -64,38 +64,18 @@
         <div id="mainContent">
             <div class="flex items-center mb-8">
                 <div class="flex-grow">
-                    <h2 class="text-4xl font-bold mb-2">Yaklaşan Şarkılar</h2>
+                    <h2 class="text-4xl font-bold mb-2">Merhaba!</h2>
                     <p class="text-gray-400 text-lg">Senin için hazırlandı.</p>
-                    <div class="mt-12">
-                <div class="flex justify-between items-center mb-6">                    
-                    <div class="flex gap-2">
-                        <button id="upcomingPrevBtn" class="bg-slate-700 hover:bg-indigo-600 text-white p-2 rounded-full w-8 h-8 flex items-center justify-center transition-colors" aria-label="Önceki Yaklaşan Şarkılar">
-                            <i class="fa fa-chevron-left"></i>
-                        </button>
-                        <button id="upcomingNextBtn" class="bg-slate-700 hover:bg-indigo-600 text-white p-2 rounded-full w-8 h-8 flex items-center justify-center transition-colors" aria-label="Sonraki Yaklaşan Şarkılar">
-                            <i class="fa fa-chevron-right"></i>
-                        </button>
-                    </div>
-                </div>
-                <div class="relative">
-                    <div id="upcomingMusicContainerWrapper" class="overflow-hidden">
-                        <div id="upcomingMusicContainer" class="flex gap-6 transition-transform duration-300 ease-in-out pb-2">
-                            <p class="text-gray-400 text-center col-span-full">Yaklaşan şarkı bulunmamaktadır.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
                 </div>
                 </div>
 
             <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-5 gap-6" id="musicCardsContainer">
                 <div class="bg-slate-800 p-4 rounded-lg shadow-lg flex flex-col items-center text-center hover:bg-slate-700 transition-colors cursor-pointer">
                     <img src="https://placehold.co/150x150/7f9cf5/ffffff?text=Senin+İçin" alt="Playlist Cover" class="w-full h-auto rounded-md mb-3 object-cover">
-                    
+                    <h4 class="font-semibold text-lg truncate w-full">Popüler Şarkılar</h4>
+                    <p class="text-sm text-gray-400 truncate w-full">En çok dinlenenler</p>
                 </div>
             </div>
-
-            
         </div>
     </main>
 
@@ -104,7 +84,7 @@
             <img id="coverImage" src="https://placehold.co/60x60/e2e8f0/94a3b8?text=Müzik+Seçin" alt="Albüm Kapağı" width="60" height="60" class="rounded-md shadow-md object-cover border border-gray-700"/>
             <div class="flex flex-col">
                 <h4 id="currentSongTitle" class="text-white font-semibold text-lg truncate w-40">Müzik Seçin</h4>
-                <p id="currentSongArtist" class="text-gray-400 text-sm">Bilinmeyen Sanatçı</p>
+                <p id="currentSongArtist" class="text-gray-400 text-sm"></p>
             </div>
         </div>
 
