--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css.css"> <link rel="shortcut icon" href="music.png" />
+    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="music.png" />
 </head>
 <body class="bg-gray-100 flex h-screen overflow-hidden">
 
@@ -80,10 +81,7 @@
 
     <footer class="fixed bottom-0 left-0 right-0 bg-slate-900 border-t border-gray-700 p-4 flex items-center justify-between z-30 shadow-2xl">
         <div class="flex items-center gap-4 w-1/3">
-            <div class="plak-cerceve relative w-[60px] h-[60px] flex items-center justify-center">
-                <img id="coverImage" src="https://placehold.co/60x60/e2e8f0/94a3b8?text=Müzik+Seçin" alt="Albüm Kapağı" width="60" height="60" class="plak-kapak rounded-md shadow-md object-cover border border-gray-700 absolute inset-0"/>
-                <div class="plak-merkez absolute rounded-full bg-slate-900 border border-gray-600 z-10"></div>
-            </div>
+            <img id="coverImage" src="https://placehold.co/60x60/e2e8f0/94a3b8?text=Müzik+Seçin" alt="Albüm Kapağı" width="60" height="60" class="rounded-md shadow-md object-cover border border-gray-700"/>
             <div class="flex flex-col">
                 <h4 id="currentSongTitle" class="text-white font-semibold text-lg truncate w-40">Müzik Seçin</h4>
                 <p id="currentSongArtist" class="text-gray-400 text-sm"></p>
@@ -171,5 +169,7 @@
         </div>
     </div>
 
-    <script src="ss.js"></script> </body>
+    <script src="script.js"></script>
+
+</body>
 </html>
