--- a/index.html
+++ b/index.html
@@ -16,144 +16,160 @@
 <body class="bg-gray-100 flex h-screen overflow-hidden">
 
     <aside class="w-64 md:w-72 lg:w-80 bg-gradient-to-br from-gray-900 to-slate-800 text-white p-5 flex flex-col shadow-lg overflow-y-auto z-20">
-        <div class="flex items-center justify-between mb-8">
-            <h2 class="text-3xl font-bold text-transparent bg-clip-text bg-gradient-to-r from-purple-400 to-pink-600">Müzik Çalar</h2>
-            <button id="closeSidebar" class="md:hidden text-gray-400 hover:text-white focus:outline-none">
-                <i class="fa fa-times text-2xl"></i>
+        <div class="flex items-center justify-between mb-6">
+            <h1 class="text-3xl font-bold text-white flex items-center gap-2">
+                <i class="fa-solid fa-compact-disc text-indigo-400"></i> Müzik
+            </h1>
+            <button id="adminButton" class="bg-slate-700 hover:bg-indigo-700 text-white font-semibold py-2 px-3 rounded-lg shadow-md transition-all flex items-center justify-center z-10 text-sm">
+                <i class="fa fa-lock"></i>
             </button>
         </div>
 
-        <nav class="flex-grow">
-            <ul>
-                <li class="mb-4">
-                    <a href="#" id="homeLink" class="flex items-center text-gray-300 hover:text-white transition-colors duration-200">
-                        <i class="fa fa-home mr-3 text-xl"></i>
-                        <span class="text-lg font-medium">Ana Sayfa</span>
+        <div class="mb-6">
+            <h2 class="text-xl font-semibold mb-3">Kitaplığın</h2>
+            <ul class="space-y-2">
+                <li>
+                    <a href="#" id="homeButton" class="flex items-center gap-3 p-2 rounded-lg hover:bg-gray-700 transition-colors active-link">
+                        <i class="fa fa-home text-xl"></i>
+                        <span class="font-medium">Ana Sayfa</span>
                     </a>
                 </li>
-                <li class="mb-4">
-                    <a href="https://music-betalive.vercel.app/admin" target="_blank" class="flex items-center text-gray-300 hover:text-white transition-colors duration-200">
-                        <i class="fa fa-user-shield mr-3 text-xl"></i>
-                        <span class="text-lg font-medium">Admin Paneli</span>
+                <li>
+                    <a href="#" id="sidebarSearchButton" class="flex items-center gap-3 p-2 rounded-lg hover:bg-gray-700 transition-colors">
+                        <i class="fa fa-magnifying-glass text-xl"></i>
+                        <span class="font-medium">Ara</span>
                     </a>
                 </li>
-                </ul>
-        </nav>
+            </ul>
+        </div>
 
-        <div class="mt-auto p-4 bg-gray-800 rounded-xl shadow-lg border border-gray-700">
-            <img id="coverImage" src="music.png" alt="Şarkı Kapak Resmi" class="w-full h-40 object-cover rounded-lg mb-3 shadow-md">
-            <h4 id="currentSongTitle" class="text-xl font-semibold text-white truncate mb-1">Müzik Yükleniyor...</h4>
-            <p id="currentSongArtist" class="text-md text-gray-400 truncate mb-3"></p>
-
-            <div class="flex items-center justify-between mb-4">
-                <button id="prevButton" class="text-gray-400 hover:text-white transition-colors focus:outline-none">
-                    <i class="fa fa-backward text-2xl"></i>
-                </button>
-                <button id="playPauseButton" class="bg-indigo-600 hover:bg-indigo-700 text-white w-14 h-14 rounded-full flex items-center justify-center shadow-lg transform hover:scale-105 transition-all focus:outline-none">
-                    <i id="playPauseIcon" class="fa fa-play text-2xl"></i>
-                </button>
-                <button id="nextButton" class="text-gray-400 hover:text-white transition-colors focus:outline-none">
-                    <i class="fa fa-forward text-2xl"></i>
-                </button>
-            </div>
-
-            <div class="flex items-center mb-3">
-                <span id="currentTime" class="text-sm text-gray-400 mr-2">0:00</span>
-                <input type="range" id="progressBar" value="0" min="0" max="100" class="flex-grow h-2 bg-gray-600 rounded-lg appearance-none cursor-pointer">
-                <span id="durationTime" class="text-sm text-gray-400 ml-2">0:00</span>
-            </div>
-
-            <div class="flex items-center">
-                <button id="volumeIconButton" class="text-gray-400 hover:text-white transition-colors mr-2 focus:outline-none">
-                    <i id="volumeIcon" class="fa fa-volume-up text-xl"></i>
-                </button>
-                <input type="range" id="volumeBar" min="0" max="1" step="0.01" value="0.7" class="flex-grow h-2 bg-gray-600 rounded-lg appearance-none cursor-pointer">
-            </div>
-            <audio id="audioPlayer" preload="auto"></audio>
+        <div class="mb-6 flex-grow">
+            <h2 class="text-xl font-semibold mb-3">Çalma listeleri</h2>
+            <ul class="space-y-2" id="musicListDesktop">
+                <p class="text-gray-400 text-center mt-4">Müzikler yükleniyor...</p>
+            </ul>
         </div>
     </aside>
 
-    <main class="flex-1 bg-gray-900 text-white p-6 md:p-8 lg:p-10 overflow-y-auto relative">
-        <div class="flex justify-between items-center mb-8">
-            <button id="openSidebar" class="md:hidden text-gray-400 hover:text-white focus:outline-none">
-                <i class="fa fa-bars text-2xl"></i>
-            </button>
-            <div class="flex-grow flex justify-end">
-                <div class="relative w-full max-w-md">
-                    <input type="text" id="searchInput" placeholder="Müzik, sanatçı veya albüm ara..." class="w-full py-3 pl-12 pr-4 bg-gray-800 border border-gray-700 rounded-full text-white placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-indigo-500 shadow-md">
-                    <i class="fa fa-search absolute left-4 top-1/2 transform -translate-y-1/2 text-gray-400"></i>
+    <main class="flex-1 bg-gradient-to-br from-gray-900 to-slate-900 text-white p-6 md:p-8 relative overflow-y-auto pb-28">
+        <div id="searchArea" class="hidden sticky top-0 z-10 mb-6 backdrop-blur-md p-4 rounded-lg">
+            <div class="relative">
+                <input type="text" id="searchInput" placeholder="Müzik veya sanatçı ara..." class="w-full p-3 bg-slate-800 border border-gray-700 rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-500 text-white placeholder-gray-400">
+                <i class="fa fa-search absolute right-4 top-1/2 transform -translate-y-1/2 text-gray-400"></i>
+            </div>
+            <div id="searchResults" class="mt-2 max-h-60 overflow-y-auto bg-slate-800 rounded-lg shadow-lg">
+                </div>
+        </div>
+
+        <div id="mainContent">
+            <div class="flex items-center mb-8">
+                <div class="flex-grow">
+                    <h2 class="text-4xl font-bold mb-2">Merhaba!</h2>
+                    <p class="text-gray-400 text-lg">Senin için hazırlandı.</p>
+                </div>
+                </div>
+
+            <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-5 gap-6" id="musicCardsContainer">
+                <div class="bg-slate-800 p-4 rounded-lg shadow-lg flex flex-col items-center text-center hover:bg-slate-700 transition-colors cursor-pointer">
+                    <img src="https://placehold.co/150x150/7f9cf5/ffffff?text=Senin+İçin" alt="Playlist Cover" class="w-full h-auto rounded-md mb-3 object-cover">
+                    <h4 class="font-semibold text-lg truncate w-full">Popüler Şarkılar</h4>
+                    <p class="text-sm text-gray-400 truncate w-full">En çok dinlenenler</p>
                 </div>
             </div>
         </div>
-
-        <section class="mb-10">
-            <h2 class="text-3xl font-bold text-white mb-6">Popüler Müzikler</h2>
-            <div id="popularMusicContainer" class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 xl:grid-cols-6 gap-6">
-                </div>
-        </section>
-
-        <section class="mb-10">
-            <h2 class="text-3xl font-bold text-white mb-6">Yüklenecek Müzikler</h2>
-            <div class="relative">
-                <button id="upcomingPrevBtn" class="absolute left-0 top-1/2 transform -translate-y-1/2 bg-gray-700 hover:bg-gray-600 text-white p-3 rounded-full shadow-lg z-10 w-8 h-8 flex items-center justify-center">
-                    <i class="fa fa-chevron-left text-sm"></i>
-                </button>
-                <div id="upcomingMusicContainerWrapper" class="overflow-x-auto pb-4 px-10 -mx-10 no-scrollbar">
-                    <div id="upcomingMusicContainer" class="flex flex-nowrap gap-4">
-                        </div>
-                </div>
-                <button id="upcomingNextBtn" class="absolute right-0 top-1/2 transform -translate-y-1/2 bg-gray-700 hover:bg-gray-600 text-white p-3 rounded-full shadow-lg z-10 w-8 h-8 flex items-center justify-center">
-                    <i class="fa fa-chevron-right text-sm"></i>
-                </button>
-            </div>
-        </section>
-
-
-        <section id="adminPanel" class="bg-gray-800 p-6 rounded-lg shadow-xl hidden">
-            <h2 class="text-3xl font-bold text-white mb-6 border-b border-gray-700 pb-4">Yönetici Paneli</h2>
-
-            <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-                <div class="bg-gray-700 p-5 rounded-lg shadow-md">
-                    <h3 class="text-xl font-semibold text-gray-200 border-b border-gray-600 pb-2 mb-4">Müzik Ekle</h3>
-                    <div class="space-y-4">
-                        <div>
-                            <label for="musicTitle" class="block text-sm font-medium text-gray-300">Başlık:</label>
-                            <input type="text" id="musicTitle" class="mt-1 block w-full p-3 bg-gray-800 border border-gray-600 rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-500 text-white" placeholder="Şarkı Başlığı">
-                        </div>
-                        <div>
-                            <label for="musicArtist" class="block text-sm font-medium text-gray-300">Sanatçı:</label>
-                            <input type="text" id="musicArtist" class="mt-1 block w-full p-3 bg-gray-800 border border-gray-600 rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-500 text-white" placeholder="Sanatçı Adı">
-                        </div>
-                        <div>
-                            <label for="musicFile" class="block text-sm font-medium text-gray-300">Müzik Dosyası (MP3):</label>
-                            <input type="file" id="musicFile" accept="audio/mpeg" class="w-full text-sm text-gray-400 file:mr-4 file:py-2 file:px-4 file:rounded-lg file:border-0 file:text-sm file:font-semibold file:bg-indigo-100 file:text-indigo-700 hover:file:bg-indigo-200 cursor-pointer">
-                        </div>
-                        <div>
-                            <label for="musicImage" class="block text-sm font-medium text-gray-300">Kapak Resmi (JPG/PNG):</label>
-                            <input type="file" id="musicImage" accept="image/*" class="w-full text-sm text-gray-400 file:mr-4 file:py-2 file:px-4 file:rounded-lg file:border-0 file:text-sm file:font-semibold file:bg-indigo-100 file:text-indigo-700 hover:file:bg-indigo-200 cursor-pointer">
-
-                        </div>
-                        <button id="addMusicBtn" class="w-full bg-green-600 hover:bg-green-700 text-white font-bold py-3 px-4 rounded-lg transition-all flex items-center justify-center gap-2">
-                            <i class="fa fa-plus"></i> Müziği Ekle
-                        </button>
-                    </div>
-                </div>
-
-                <div class="bg-gray-700 p-5 rounded-lg shadow-md">
-                    <h3 class="text-xl font-semibold text-gray-200 border-b border-gray-700 pb-2">Müzik Sil</h3>
-                    <label for="deleteSelect" class="block text-sm font-medium text-gray-300">Silinecek Müziği Seç:</label>
-                    <select id="deleteSelect" class="w-full p-3 bg-gray-700 border border-gray-600 rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-500 text-white">
-                        <option value="" disabled selected>Silmek için seçin...</option>
-                    </select>
-                    <button id="deleteMusicBtn" class="mt-4 w-full bg-red-600 hover:bg-red-700 text-white font-bold py-3 px-4 rounded-lg transition-all flex items-center justify-center gap-2">
-                        <i class="fa fa-trash"></i> Müziği Sil
-                    </button>
-                </div>
-            </div>
-        </section>
-
     </main>
 
+    <footer class="fixed bottom-0 left-0 right-0 bg-slate-900 border-t border-gray-700 p-4 flex items-center justify-between z-30 shadow-2xl">
+        <div class="flex items-center gap-4 w-1/3">
+            <img id="coverImage" src="https://placehold.co/60x60/e2e8f0/94a3b8?text=Müzik+Seçin" alt="Albüm Kapağı" width="60" height="60" class="rounded-md shadow-md object-cover border border-gray-700"/>
+            <div class="flex flex-col">
+                <h4 id="currentSongTitle" class="text-white font-semibold text-lg truncate w-40">Müzik Seçin</h4>
+                <p id="currentSongArtist" class="text-gray-400 text-sm"></p>
+            </div>
+        </div>
+
+        <div class="flex flex-col items-center justify-center flex-grow px-4">
+            <div class="flex items-center justify-center gap-6 mb-2">
+                <button id="prevBtn" class="text-gray-400 hover:text-white transition-colors w-8 h-8" aria-label="Önceki Şarkı" disabled>
+                    <i class="fa fa-backward-step fa-lg"></i>
+                </button>
+                <button id="playPauseBtn" class="bg-indigo-600 hover:bg-indigo-700 text-white rounded-full w-12 h-12 flex items-center justify-center text-2xl shadow-md transition-all transform hover:scale-105">
+                    <i class="fa fa-play fa-xl"></i>
+                </button>
+                <button id="nextBtn" class="text-gray-400 hover:text-white transition-colors w-8 h-8" aria-label="Sonraki Şarkı" disabled>
+                    <i class="fa fa-forward-step fa-lg"></i>
+                </button>
+            </div>
+            <div class="flex items-center gap-3 w-full max-w-lg">
+                <span id="currentTime" class="text-xs font-medium text-gray-400 w-10 text-right tabular-nums">0:00</span>
+                <input type="range" id="seekBar" value="0" class="flex-grow seek-bar">
+                <span id="totalDuration" class="text-xs font-medium text-gray-400 w-10 text-left tabular-nums">0:00</span>
+            </div>
+        </div>
+
+        <div class="flex items-center justify-end gap-3 w-1/3">
+            <i id="volumeIcon" class="fa fa-volume-high text-gray-400 hover:text-white cursor-pointer w-5 text-center transition-colors"></i>
+            <input type="range" id="volumeBar" min="0" max="1" step="0.01" value="1" class="w-24 h-1.5 bg-gray-700 rounded-full appearance-none cursor-pointer volume-bar accent-indigo-500">
+            <button class="text-gray-400 hover:text-white transition-colors text-lg">
+                <i class="fa-solid fa-list-music"></i>
+            </button>
+        </div>
+        <audio id="audioPlayer" class="hidden"></audio>
+    </footer>
+
+    <div id="adminPanel" class="fixed inset-0 bg-black bg-opacity-80 backdrop-blur-sm text-white flex items-center justify-center z-50 hidden p-5">
+        <div class="bg-slate-800 p-6 md:p-8 rounded-xl shadow-2xl w-full max-w-md relative">
+            <button id="closeAdminPanelBtn" class="absolute top-3 right-3 text-gray-400 hover:text-white text-2xl transition-colors">
+                <i class="fa fa-times"></i>
+            </button>
+
+            <h2 class="text-2xl font-semibold mb-6 text-center flex items-center justify-center gap-3"><i class="fa fa-user-shield text-indigo-400"></i> Admin Paneli</h2>
+
+             <div id="loginForm" class="flex flex-col items-center space-y-4">
+                 <p class="text-gray-400 text-center">Giriş Yapın</p>
+                 <input type="email" id="authEmail" placeholder="Email" class="w-full p-3 bg-gray-700 border border-gray-600 rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-500 text-white placeholder-gray-400">
+                 <input type="password" id="authPass" placeholder="Şifre" class="w-full p-3 bg-gray-700 border border-gray-600 rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-500 text-white placeholder-gray-400">
+                 <button id="signInBtn" class="w-full bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-3 px-4 rounded-lg transition-all flex items-center justify-center gap-2">
+                     <i class="fa fa-sign-in-alt"></i> Giriş Yap
+                 </button>
+             </div>
+
+            <div id="adminControls" class="hidden flex-col space-y-4">
+                <p id="loggedInUserEmail" class="text-gray-300 text-center font-medium"></p>
+                <button id="signOutBtn" class="w-max mx-auto bg-red-600 hover:bg-red-700 text-white font-bold py-2 px-4 rounded-lg transition-all flex items-center justify-center gap-2 text-sm">
+                     <i class="fa fa-sign-out-alt"></i> Çıkış Yap
+                 </button>
+
+                <hr class="border-gray-600 my-4">
+
+                <h3 class="text-xl font-semibold text-gray-200 border-b border-gray-700 pb-2">Müzik Ekle</h3>
+                <input type="text" id="musicName" placeholder="Müzik Adı" class="w-full p-3 bg-gray-700 border border-gray-600 rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-500 text-white placeholder-gray-400">
+
+                <label class="block text-sm font-medium text-gray-300">Müzik Dosyası (MP3, WAV...):</label>
+                <input type="file" id="musicFile" accept="audio/*" class="w-full text-sm text-gray-400 file:mr-4 file:py-2 file:px-4 file:rounded-lg file:border-0 file:text-sm file:font-semibold file:bg-indigo-100 file:text-indigo-700 hover:file:bg-indigo-200 cursor-pointer">
+
+                <label class="block text-sm font-medium text-gray-300">Kapak Resmi (İsteğe Bağlı):</label>
+                <input type="file" id="musicImage" accept="image/*" class="w-full text-sm text-gray-400 file:mr-4 file:py-2 file:px-4 file:rounded-lg file:border-0 file:text-sm file:font-semibold file:bg-indigo-100 file:text-indigo-700 hover:file:bg-indigo-200 cursor-pointer">
+
+                <button id="addMusicBtn" class="w-full bg-green-600 hover:bg-green-700 text-white font-bold py-3 px-4 rounded-lg transition-all flex items-center justify-center gap-2">
+                    <i class="fa fa-plus"></i> Müziği Ekle
+                </button>
+
+                <hr class="border-gray-600 my-4">
+
+                <h3 class="text-xl font-semibold text-gray-200 border-b border-gray-700 pb-2">Müzik Sil</h3>
+                <label for="deleteSelect" class="block text-sm font-medium text-gray-300">Silinecek Müziği Seç:</label>
+                <select id="deleteSelect" class="w-full p-3 bg-gray-700 border border-gray-600 rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-500 text-white">
+                    <option value="" disabled selected>Silmek için seçin...</option>
+                </select>
+                <button id="deleteMusicBtn" class="w-full bg-red-600 hover:bg-red-700 text-white font-bold py-3 px-4 rounded-lg transition-all flex items-center justify-center gap-2">
+                    <i class="fa fa-trash"></i> Seçilen Müziği Sil
+                </button>
+            </div>
+        </div>
+    </div>
+
     <script src="script.js"></script>
+
 </body>
 </html>
